# hyperstrings

./: .gitignore  .pre-commit-config.yaml  TODO.md  prototyping.ipynb  pyproject.toml
hyperstrings/: __init__.py  hypergraph.py
hyperstrings/hypergraph/: __init__.py  composable.py  drawable.py  generator.py  hypergraph.py  immutable.py  mutable.py  properties.py
hyperstrings/hypergraph/adjacencytensor/: __init__.py  backend.py  composable.py  drawable.py  hypergraph.py  immutable.py  mutable.py
hyperstrings/hypergraph/dict/: __init__.py  hypergraph.py
hyperstrings/prototyping/: array.ipynb  compose.ipynb  discopy.ipynb  scratchpad.ipynb
prototyping/: array.ipynb  discopy.ipynb  scratchpad.ipynb  yarrow.ipynb
